examples/test/testpolicy7036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7036
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key7: value5
      key2: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value12
          key5: value45
      podSelector:
        matchLabels:
          key46: value34
          key4: value29
          key11: value6
